[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/gui/gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/GameMenu.gd" type="Script" id=2]
[ext_resource path="res://maps/BayMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/AI.gd" type="Script" id=4]
[ext_resource path="res://engine/ChoicePopup.gd" type="Script" id=5]
[ext_resource path="res://engine/Main.gd" type="Script" id=15]
[ext_resource path="res://ui/ActionMenu.gd" type="Script" id=16]
[ext_resource path="res://ui/BuildingMenu.gd" type="Script" id=17]
[ext_resource path="res://ui/TileUnitInfo.gd" type="Script" id=19]
[ext_resource path="res://ui/FixedInfo.gd" type="Script" id=20]
[ext_resource path="res://ui/EntityInfo.tscn" type="PackedScene" id=21]
[ext_resource path="res://ui/UnitTable.gd" type="Script" id=22]
[ext_resource path="res://assets/gui/unit_info_icons/ammo_icon.png" type="Texture" id=23]
[ext_resource path="res://assets/gui/unit_info_icons/energy_icon.png" type="Texture" id=24]
[ext_resource path="res://assets/gui/def_star.png" type="Texture" id=25]
[ext_resource path="res://ui/StatusTable.gd" type="Script" id=26]
[ext_resource path="res://ui/DetailedInfoMenu.gd" type="Script" id=27]
[ext_resource path="res://assets/gui/unit_info_icons/health_icon.png" type="Texture" id=28]
[ext_resource path="res://assets/gui/capture_points_icon.png" type="Texture" id=29]
[ext_resource path="res://ui/COMenu.gd" type="Script" id=30]
[ext_resource path="res://engine/COPowers.gd" type="Script" id=31]
[ext_resource path="res://assets/gui/power_stars/power_star_5.png" type="Texture" id=32]
[ext_resource path="res://assets/gui/power_stars/super_star_5.png" type="Texture" id=33]
[ext_resource path="res://assets/gui/power_stars/power_star_empty_5.png" type="Texture" id=34]
[ext_resource path="res://assets/gui/power_stars/super_star_empty_5.png" type="Texture" id=35]
[ext_resource path="res://assets/gui/popup_text/victory.png" type="Texture" id=38]
[ext_resource path="res://ui/BigTextPopup.gd" type="Script" id=39]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( -3.75768e-20, 7.25873e-43 )
colors = PoolColorArray( 0.2, 0.862745, 0.737255, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.152941, 0.823529, 0.823529, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 15 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUIContainer" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="ActionMenu" type="PopupMenu" parent="GUI/GUIContainer"]
margin_right = 66.0
margin_bottom = 40.0
mouse_filter = 1
mouse_default_cursor_shape = 2
hide_on_checkable_item_selection = false
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" type="PopupMenu" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_right = -144.0
margin_bottom = 52.0
mouse_filter = 1
mouse_default_cursor_shape = 2
hide_on_checkable_item_selection = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenu" type="PopupMenu" parent="GUI/GUIContainer"]
margin_right = 8.0
margin_bottom = 8.0
script = ExtResource( 17 )

[node name="DetailedInfoMenu" type="PopupPanel" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -137.0
margin_right = 196.0
margin_bottom = 137.0
script = ExtResource( 27 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 388.0
margin_bottom = 270.0

[node name="DetailedTileInfo" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer"]
margin_right = 190.0
margin_bottom = 266.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo"]
margin_right = 190.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer"]
margin_bottom = 44.0

[node name="Name" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer/VBoxContainer"]
margin_bottom = 20.0

[node name="TileSprite" type="TextureRect" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_bottom = 24.0

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 44.0

[node name="Funds" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer/VBoxContainer2"]
margin_bottom = 20.0

[node name="Repair" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_bottom = 44.0

[node name="TerrainStars" type="TextureProgress" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo"]
margin_top = 48.0
margin_right = 190.0
margin_bottom = 64.0
max_value = 4.0
texture_progress = ExtResource( 25 )

[node name="Desc" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo"]
margin_top = 68.0
margin_right = 190.0
margin_bottom = 88.0
autowrap = true

[node name="Movement" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo"]
margin_top = 92.0
margin_right = 190.0
margin_bottom = 116.0

[node name="Title" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/Movement"]
margin_right = 190.0
margin_bottom = 20.0

[node name="Info" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/DetailedTileInfo/Movement"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 24.0

[node name="UnitInfo" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer"]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 266.0
size_flags_horizontal = 3

[node name="UnitStats" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo"]
margin_right = 190.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats"]
margin_bottom = 44.0

[node name="Name" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats/VBoxContainer"]
margin_bottom = 20.0

[node name="UnitSprite" type="TextureRect" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats/VBoxContainer"]
margin_top = 24.0
margin_bottom = 24.0

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 44.0

[node name="Movement" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats/VBoxContainer2"]
margin_bottom = 20.0

[node name="Energy" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats/VBoxContainer2"]
margin_top = 24.0
margin_bottom = 44.0

[node name="VBoxContainer3" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 44.0

[node name="UnitPoints" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/UnitStats/VBoxContainer3"]
margin_bottom = 20.0

[node name="UnitDesc" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo"]
margin_top = 48.0
margin_right = 190.0
margin_bottom = 68.0
autowrap = true

[node name="WeaponsInfo" type="VBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo"]
margin_top = 72.0
margin_right = 190.0
margin_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo"]
margin_right = 190.0
margin_bottom = 20.0

[node name="Weapon1" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo/HBoxContainer"]
margin_right = 93.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Ammo" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo/HBoxContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 20.0
size_flags_horizontal = 3
align = 2

[node name="Weapon1Info" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 24.0

[node name="Weapon2" type="Label" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo"]
margin_top = 28.0
margin_right = 190.0
margin_bottom = 48.0

[node name="Weapon2Info" type="HBoxContainer" parent="GUI/GUIContainer/DetailedInfoMenu/HBoxContainer/UnitInfo/WeaponsInfo"]
margin_top = 52.0
margin_right = 190.0
margin_bottom = 52.0

[node name="UnitMenu" type="PopupPanel" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -144.0
margin_right = 240.0
margin_bottom = 144.0

[node name="UnitTable" type="VBoxContainer" parent="GUI/GUIContainer/UnitMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 284.0
script = ExtResource( 22 )

[node name="Header" type="HBoxContainer" parent="GUI/GUIContainer/UnitMenu/UnitTable"]
margin_right = 472.0
margin_bottom = 20.0

[node name="Unit" type="Label" parent="GUI/GUIContainer/UnitMenu/UnitTable/Header"]
margin_right = 91.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="GUI/GUIContainer/UnitMenu/UnitTable/Header"]
margin_left = 95.0
margin_right = 186.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="HP" type="Label" parent="GUI/GUIContainer/UnitMenu/UnitTable/Header"]
margin_left = 190.0
margin_right = 281.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Ammo" type="Label" parent="GUI/GUIContainer/UnitMenu/UnitTable/Header"]
margin_left = 285.0
margin_right = 376.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Energy" type="Label" parent="GUI/GUIContainer/UnitMenu/UnitTable/Header"]
margin_left = 380.0
margin_right = 472.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/GUIContainer/UnitMenu/UnitTable"]
margin_top = 24.0
margin_right = 472.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TableContent" type="VBoxContainer" parent="GUI/GUIContainer/UnitMenu/UnitTable/ScrollContainer"]
margin_right = 472.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusInfoMenu" type="PopupPanel" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -80.0
margin_right = 240.0
margin_bottom = 80.0

[node name="StatusTable" type="VBoxContainer" parent="GUI/GUIContainer/StatusInfoMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 156.0
script = ExtResource( 26 )

[node name="Header" type="HBoxContainer" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable"]
margin_right = 472.0
margin_bottom = 20.0

[node name="Team" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_right = 91.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Units" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 95.0
margin_right = 186.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Lost" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 190.0
margin_right = 281.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Bases" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 285.0
margin_right = 376.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Funds" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 380.0
margin_right = 472.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Income" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 380.0
margin_right = 472.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="UnitPoints" type="Label" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/Header"]
margin_left = 380.0
margin_right = 472.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable"]
margin_top = 24.0
margin_right = 472.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TableContent" type="VBoxContainer" parent="GUI/GUIContainer/StatusInfoMenu/StatusTable/ScrollContainer"]
margin_right = 472.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FixedInfo" type="PanelContainer" parent="GUI/GUIContainer"]
margin_right = 104.0
margin_bottom = 58.0
script = ExtResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GUIContainer/FixedInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 59.0

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/GUIContainer/FixedInfo/VBoxContainer"]
margin_right = 199.0
margin_bottom = 7.0

[node name="Day" type="Label" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer3"]
margin_right = 199.0
margin_bottom = 7.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/GUIContainer/FixedInfo/VBoxContainer"]
margin_top = 11.0
margin_right = 199.0
margin_bottom = 18.0

[node name="COIcon" type="TextureRect" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer"]
margin_bottom = 7.0

[node name="Funds" type="Label" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 36.0
margin_bottom = 7.0
text = "3000"

[node name="FundsPerTurn" type="Label" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 7.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/GUIContainer/FixedInfo/VBoxContainer"]
margin_top = 22.0
margin_right = 199.0
margin_bottom = 41.0

[node name="PowerStars" type="TextureProgress" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 19.0
step = 1000.0
texture_under = ExtResource( 34 )
texture_progress = ExtResource( 32 )

[node name="SuperStars" type="TextureProgress" parent="GUI/GUIContainer/FixedInfo/VBoxContainer/HBoxContainer2"]
margin_left = 94.0
margin_right = 199.0
margin_bottom = 19.0
step = 1000.0
texture_under = ExtResource( 35 )
texture_progress = ExtResource( 33 )

[node name="Status" type="Label" parent="GUI/GUIContainer/FixedInfo/VBoxContainer"]
margin_top = 45.0
margin_right = 199.0
margin_bottom = 52.0
text = "POWER ACTIVE!"

[node name="TileUnitInfo" type="VBoxContainer" parent="GUI/GUIContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -188.0
margin_right = 144.0
mouse_filter = 0
custom_constants/separation = 0
alignment = 2
script = ExtResource( 19 )

[node name="DamagePreview" type="PanelContainer" parent="GUI/GUIContainer/TileUnitInfo"]
visible = false
margin_right = 14.0
margin_bottom = 78.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/DamagePreview"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 71.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="GUI/GUIContainer/TileUnitInfo/DamagePreview/VBoxContainer"]
margin_bottom = 20.0
size_flags_vertical = 1

[node name="Gradient" type="TextureRect" parent="GUI/GUIContainer/TileUnitInfo/DamagePreview/VBoxContainer"]
margin_top = 24.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 6 )
expand = true

[node name="Percent" type="Label" parent="GUI/GUIContainer/TileUnitInfo/DamagePreview/VBoxContainer/Gradient"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="GUI/GUIContainer/TileUnitInfo"]
margin_top = 103.0
margin_right = 144.0
margin_bottom = 188.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 78.0

[node name="EntityInfo" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer" instance=ExtResource( 21 )]
margin_right = 20.0
margin_bottom = 71.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo"]
margin_top = 15.0
margin_right = 20.0
margin_bottom = 71.0

[node name="Health" type="HBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer"]
margin_right = 20.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Health"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 28 )

[node name="Label" type="Label" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Health"]
margin_left = 20.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 11.0

[node name="Ammo" type="HBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 36.0

[node name="TextureRect" type="TextureRect" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Ammo"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Ammo"]
margin_left = 20.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 11.0

[node name="Energy" type="HBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer"]
margin_top = 40.0
margin_right = 20.0
margin_bottom = 56.0

[node name="TextureRect" type="TextureRect" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Energy"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 24 )

[node name="Label" type="Label" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo/VBoxContainer/Energy"]
margin_left = 20.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 11.0

[node name="EntityInfo2" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer" instance=ExtResource( 21 )]
margin_left = 24.0
margin_right = 94.0
margin_bottom = 71.0

[node name="TextureProgress" type="TextureProgress" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo2"]
margin_top = 15.0
margin_right = 70.0
margin_bottom = 31.0
max_value = 4.0
texture_progress = ExtResource( 25 )

[node name="CapturePoints" type="HBoxContainer" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo2"]
margin_top = 35.0
margin_right = 70.0
margin_bottom = 51.0

[node name="TextureRect" type="TextureRect" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo2/CapturePoints"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 29 )

[node name="Label" type="Label" parent="GUI/GUIContainer/TileUnitInfo/PanelContainer/HBoxContainer/EntityInfo2/CapturePoints"]
margin_left = 20.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 11.0

[node name="COMenu" type="PopupPanel" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -110.0
margin_right = 108.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="GUI/GUIContainer/COMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -121.0
margin_right = 146.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 30 )

[node name="BigTextPopup" type="PopupPanel" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_top = 0.459
anchor_right = 0.5
anchor_bottom = 0.459
margin_left = -480.0
margin_top = -15.43
margin_right = 480.0
margin_bottom = 48.57
grow_vertical = 2
custom_styles/panel = SubResource( 7 )
script = ExtResource( 39 )

[node name="Message" type="TextureRect" parent="GUI/GUIContainer/BigTextPopup"]
margin_right = 960.0
margin_bottom = 64.0
texture = ExtResource( 38 )
stretch_mode = 4

[node name="ChoicePopup" type="PopupMenu" parent="GUI/GUIContainer"]
margin_right = 8.0
margin_bottom = 8.0
script = ExtResource( 5 )

[node name="Description" type="Label" parent="GUI/GUIContainer/ChoicePopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 11.0

[node name="AI" type="Node" parent="."]
script = ExtResource( 4 )

[node name="COPowers" type="Node" parent="."]
script = ExtResource( 31 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[connection signal="visibility_changed" from="GUI/GUIContainer/UnitMenu" to="." method="_on_UnitMenu_visibility_changed"]
[connection signal="visibility_changed" from="GUI/GUIContainer/StatusInfoMenu" to="." method="_on_StatusInfoMenu_visibility_changed"]
[connection signal="mouse_entered" from="GUI/GUIContainer/FixedInfo" to="GUI/GUIContainer/FixedInfo" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="GUI/GUIContainer/TileUnitInfo" to="GUI/GUIContainer/TileUnitInfo" method="_on_mouse_entered"]
[connection signal="visibility_changed" from="GUI/GUIContainer/COMenu" to="." method="_on_COMenu_visibility_changed"]
